--- a/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
+++ b/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
@@ -2,65 +2,63 @@ modbus:
   host: 0.0.0.0
   port: 9000
   holding_registers:
-    parameters:
-      - name: "target_pressure_pistons"
-        address: 40001
-        data_type: "uint16"
-        value: 0
-      - name: "target_pressure_material"
-        address: 40002
-        data_type: "uint16"
-        value: 0
-      - name: "system_state"
-        address: 40003
-        data_type: "uint16"
-        value: 0
-      - name: "pulse_train_high"
-        address: 40004
-        data_type: "uint16"
-        value: 0
-      - name: "pulse_train_medium"
-        address: 40005
-        data_type: "uint16"
-        value: 0
-      - name: "pulse_train_low"
-        address: 40006
-        data_type: "uint16"
-        value: 0
-      - name: "emergency_stop_state"
-        address: 40007
-        data_type: "uint16"
-        value: 0
-      - name: "solenoid_valves_state"
-        address: 40008
-        data_type: "uint16"
-        value: 0
-      - name: "alarm_state"
-        address: 40009
-        data_type: "uint16"
-        value: 0
-      - name: "alarm_pre_vacuum_limit_high"
-        address: 40010
-        data_type: "uint16"
-        value: 0
-      - name: "alarm_pre_vacuum_limit_low"
-        address: 40011
-        data_type: "uint16"
-        value: 0
-      - name: "alarm_pre_vacuum_distance"
-        address: 40012
-        data_type: "uint16"
-        value: 0
-    sensors:
-      - name: "material_pressure"
-        address: 40013
-        data_type: "uint16"
-        value: 0
-      - name: "material_temperature"
-        address: 40014
-        data_type: "uint16"
-        value: 0
-      - name: "laser_distance"
-        address: 40014
-        data_type: "uint16"
-        value: 0
+    - name: "param_target_pressure_pistons"
+      address: 40001
+      data_type: "uint16"
+      value: 0
+    - name: "param_target_pressure_material"
+      address: 40002
+      data_type: "uint16"
+      value: 0
+    - name: "param_system_state"
+      address: 40003
+      data_type: "uint16"
+      value: 0
+    - name: "param_pulse_train_high"
+      address: 40004
+      data_type: "uint16"
+      value: 0
+    - name: "param_pulse_train_medium"
+      address: 40005
+      data_type: "uint16"
+      value: 0
+    - name: "param_pulse_train_low"
+      address: 40006
+      data_type: "uint16"
+      value: 0
+    - name: "param_emergency_stop_state"
+      address: 40007
+      data_type: "uint16"
+      value: 0
+    - name: "param_solenoid_valves_state"
+      address: 40008
+      data_type: "uint16"
+      value: 0
+    - name: "param_alarm_state"
+      address: 40009
+      data_type: "uint16"
+      value: 0
+    - name: "param_alarm_pre_vacuum_limit_high"
+      address: 40010
+      data_type: "uint16"
+      value: 0
+    - name: "param_alarm_pre_vacuum_limit_low"
+      address: 40011
+      data_type: "uint16"
+      value: 0
+    - name: "param_alarm_pre_vacuum_distance"
+      address: 40012
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_material_pressure"
+      address: 40013
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_material_temperature"
+      address: 40014
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_laser_distance"
+      address: 40014
+      data_type: "uint16"
+      value: 0
