--- a/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
+++ b/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
@@ -1,6 +1,6 @@
 modbus:
-  host: 0.0.0.0
-  port: 9000
+  host: 0.0.0.0  # this will be the HMI's IP
+  port: 9000  # 502 is the standard
   holding_registers:
     - name: "param_target_pressure_pistons"
       address: 40001
