--- a/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
+++ b/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
@@ -3,6 +3,7 @@
       id: 0
       host: 0.0.0.0  # this will be the HMI's IP
       port: 9000  # 502 is the standard
+      offset: 0
   holding_registers:
     - name: "param_target_pressure_pistons"
       address: 40001
