--- a/rel_interfaces/CMakeLists.txt
+++ b/rel_interfaces/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/HMI.msg"
+  "msg/IOLinkData.msg"
 )
 
 if(BUILD_TESTING)
