start adding hmi mastes in master node

--- a/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
@@ -14,7 +14,7 @@ holding_registers:
       data_type: "uint16"
       value: 0
       words: 1
-slaves:
+iolinks:
   -   name: "master io link 0"
       hmi_id: 0
       hmi_name: "HMI 0"
