update hmi registers

--- a/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
+++ b/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
@@ -119,3 +119,79 @@
       address: 40016
       data_type: "uint16"
       value: 0
+    - name: "status_general" # status registers
+      address: 40017
+      data_type: "uint16"
+      value: 0
+    - name: "status_in_process_alarm"
+      address: 40018
+      data_type: "uint16"
+      value: 0
+    - name: "status_operational_alarm"
+      address: 40019
+      data_type: "uint16"
+      value: 0
+    - name: "status_operational_state"
+      address: 40020
+      data_type: "uint16"
+      value: 0
+    - name: "status_extend_piston"
+      address: 40021
+      data_type: "uint16"
+      value: 0
+    - name: "status_retract_piston"
+      address: 40022
+      data_type: "uint16"
+      value: 0
+    - name: "status_air_vacuum"
+      address: 40023
+      data_type: "uint16"
+      value: 0
+    - name: "status_acoustic_signal"
+      address: 40024
+      data_type: "uint16"
+      value: 0
+    - name: "status_recycling"
+      address: 40025
+      data_type: "uint16"
+      value: 0
+    - name: "data_target_pressure_pistons" # data registers
+      address: 40026
+      data_type: "uint16"
+      value: 0
+    - name: "data_target_pressure_hyd"  # same as material pressure??
+      address: 40027
+      data_type: "uint16"
+      value: 0
+    - name: "data_pulse_train_low"
+      address: 40028
+      data_type: "uint16"
+      value: 0
+    - name: "data_pulse_train_medium"
+      address: 40029
+      data_type: "uint16"
+      value: 0
+    - name: "data_pulse_train_high"
+      address: 40030
+      data_type: "uint16"
+      value: 0
+    - name: "data_vacuum_limit_high"
+      address: 40031
+      data_type: "uint16"
+      value: 0
+    - name: "data_vacuum_limit_low"
+      address: 40032
+      data_type: "uint16"
+      value: 0
+    - name: "data_vacuum_distance"
+      address: 40033
+      data_type: "uint16"
+      value: 0
+    - name: "data_security_distance"
+      address: 40034
+      data_type: "uint16"
+      value: 0
+    - name: "data_pulse_train_selection"
+      address: 40035
+      data_type: "uint16"
+      value: 0
