--- a/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
@@ -1,3 +1,9 @@
+control_status_values:
+  full: [22, 3628, 256, 1, 0, 256, 1, 0]
+  medium_high: [16, 3328, 5645, 1, 0, 256, 1, 0]
+  medium: [0, 0, 0, 1046, 3328, 260, 1, 1024]
+  pre_vacuum: [0, 0, 0, 0, 3332, 1549, 1, 1024]
+  vacuum: [0, 0, 0, 0, 0, 13, 15, 256]
 control_status:
   full:
     - address: 6060
