simplify tower status

--- a/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
@@ -1,156 +1,9 @@
-control_status_values:
+start_address: 6060
+total_registers: 8
+states:
   full: [22, 3628, 256, 1, 0, 256, 1, 0]
   medium_high: [16, 3328, 5645, 1, 0, 256, 1, 0]
   medium: [0, 0, 0, 1046, 3328, 260, 1, 1024]
   pre_vacuum: [0, 0, 0, 0, 3332, 1549, 1, 1024]
   vacuum: [0, 0, 0, 0, 0, 13, 15, 256]
-control_status:
-  full:
-    - address: 6060
-      value: 22
-    - address: 6061
-      value: 3628
-    - address: 6062
-      value: 256
-    - address: 6063
-      value: 1
-    - address: 6064
-      value: 0
-    - address: 6065
-      value: 256
-    - address: 6066
-      value: 1
-    - address: 6067
-      value: 0
-  medium_high:
-    - address: 6060
-      value: 16
-    - address: 6061
-      value: 3328
-    - address: 6062
-      value: 5645
-    - address: 6063
-      value: 1
-    - address: 6064
-      value: 0
-    - address: 6065
-      value: 256
-    - address: 6066
-      value: 1
-    - address: 6067
-      value: 0
-  medium:
-    - address: 6060
-      value: 0
-    - address: 6061
-      value: 0
-    - address: 6062
-      value: 0
-    - address: 6063
-      value: 1046
-    - address: 6064
-      value: 3328
-    - address: 6065
-      value: 260
-    - address: 6066
-      value: 1
-    - address: 6067
-      value: 1024
-  pre_vacuum:
-    - address: 6060
-      value: 0
-    - address: 6061
-      value: 0
-    - address: 6062
-      value: 0
-    - address: 6063
-      value: 0
-    - address: 6064
-      value: 3332
-    - address: 6065
-      value: 1549
-    - address: 6066
-      value: 1
-    - address: 6067
-      value: 1024
-  vacuum:
-    - address: 6060
-      value: 0
-    - address: 6061
-      value: 0
-    - address: 6062
-      value: 0
-    - address: 6063
-      value: 0
-    - address: 6064
-      value: 0
-    - address: 6065
-      value: 13
-    - address: 6066
-      value: 15
-    - address: 6067
-      value: 256
-  bucket_change:
-    - address: 6060
-      value: 23
-    - address: 6061
-      value: 1024
-    - address: 6062
-      value: 5892
-    - address: 6063
-      value: 23
-    - address: 6064
-      value: 1024
-    - address: 6065
-      value: 5892
-    - address: 6066
-      value: 4119
-    - address: 6067
-      value: 1024
-  sound_alarm_on:
-    - address: 6052
-    - value: 256
-  sound_alarm_off:
-    - address: 6052
-    - value: 0
-  valve_hyd_on:
-    - address: 7051
-    - value: 3
-  valve_hyd_off:
-    - address: 7051
-    - value: 1
-basic:  # mode
-  segments:
-    audible:
-      octect: 5
-      bits: [1, 0]
-    segment_1:
-      octect: 3
-      bits: [1, 0]
-    segment_2:
-      octect: 3
-      bits: [3, 2]
-    segment_3:
-      octect: 3
-      bits: [5, 4]
-    segment_4:
-      octect: 3
-      bits: [7, 6]
-    segment_5:
-      octect: 2
-      bits: [9, 8]
-    segment_6:
-      octect: 2
-      bits: [11, 10]
-    segment_7:
-      octect: 2
-      bits: [13, 12]
-    segment_8:
-      octect: 2
-      bits: [15, 14]
-    segment_9:
-      octect: 1
-      bits: [1, 0]
-    segment_10:
-      octect: 1
-      bits: [3, 2]
+  bucket_change: [23, 1024, 5892, 23, 1024, 5892, 4119, 1024]
