--- a/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/status_device.yml
@@ -7,3 +7,4 @@ states:
   pre_vacuum: [0, 0, 0, 0, 3332, 1549, 1, 1024]
   vacuum: [0, 0, 0, 0, 0, 13, 15, 256]
   bucket_change: [23, 1024, 5892, 23, 1024, 5892, 4119, 1024]
+  acoustic_alarm: [6052]
