--- a/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
+++ b/rel_ros_hmi/rel_ros_hmi/config/hmi.yml
@@ -195,3 +195,27 @@
       address: 40035
       data_type: "uint16"
       value: 0
+    - name: "sensor_material_pressure"
+      address: 40036
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_material_temperature"
+      address: 40037
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_laser_distance"
+      address: 40038
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_pressure_regulator_read_set"
+      address: 40039
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_pressure_regulator_read_real"
+      address: 40040
+      data_type: "uint16"
+      value: 0
+    - name: "sensor_pressure_regulator_valve_read_state"
+      address: 40041
+      data_type: "uint16"
+      value: 0
