--- a/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
@@ -55,11 +55,17 @@ holding_registers:
       data_type: "uint16"
       mode: "w"
 iolinks:
-  -   name: "master io link 0"
-      hmi_id: 0
-      hmi_name: "HMI 0"
-      host: 192.168.0.21
-      port: 502
-      framer: "socket"
-      timeout_seconds: 10
-      offset: -1
+  - name: "master io link 0"
+    hmi_id: 0
+    hmi_name: "HMI 0"
+    host: 192.168.0.21
+    port: 502
+    framer: "socket"
+    timeout_seconds: 10
+    offset: -1
+hmis:  # the HMIs should match the slaves under rel_ros_hmi
+  - name: "HMI 0"
+    id: 0
+    host: 0.0.0.0  # localhost for ROS working as HMI slave
+    port: 8845  # 502 is the standard
+    offset: 0
